--- a/index.html
+++ b/index.html
@@ -10,30 +10,36 @@
   <body>
     <!-- Rating state start -->
     <div class="container">
-      <div class="star-container">
-        <img src="/images/icon-star.svg" alt="star" />
+      <div class="front-page">
+        <div class="star-container">
+          <img src="/images/icon-star.svg" alt="star" />
+        </div>
+        <div class="text-container">
+          <h1>How did we do?</h1>
+          <p>
+            Please let us know how we did with your support request. All
+            feedback is appreciated to help us improve our offering!
+          </p>
+        </div>
+        <div class="ratings">
+          <ul class="rating">
+            <li class="rate">1</li>
+            <li class="rate">2</li>
+            <li class="rate">3</li>
+            <li class="rate">4</li>
+            <li class="rate">5</li>
+          </ul>
+        </div>
+        <button class="btn" id="btn">Submit</button>
       </div>
-      <div class="text-container">
-        <h1>How did we do?</h1>
-        <p>
-          Please let us know how we did with your support request. All feedback
-          is appreciated to help us improve our offering!
-        </p>
-      </div>
-      <div class="ratings">
-        <ul class="rating">
-          <li class="rate">1</li>
-          <li class="rate">2</li>
-          <li class="rate">3</li>
-          <li class="rate">4</li>
-          <li class="rate">5</li>
-        </ul>
-      </div>
-      <button class="btn" id="btn">Submit</button>
-
       <!-- Rating state end -->
 
       <!-- Thank you state start -->
+      <div class="thank-you">
+        <div class="img">
+          <img src="/images/illustration-thank-you.svg" alt="img" />
+        </div>
+      </div>
     </div>
 
     <!-- Thank you state end -->
