--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Rating state start -->
-    <div class="container">
+    <div role="main" class="container">
       <div class="front-page">
         <div class="star-container">
           <img src="/images/icon-star.svg" alt="star" />
@@ -44,7 +44,7 @@
 
     <!-- Thank you state end -->
 
-    <div class="attribution">Coded by <a href="#">Amit Kumar</a>.</div>
+    <footer class="attribution">Coded by <a href="#">Amit Kumar</a>.</footer>
     <script src="/script.js"></script>
   </body>
 </html>
