--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <!-- Rating state start -->
-    <div role="main" class="container">
-      <div class="front-page">
+    <div class="container">
+      <div role="main" class="front-page">
         <div class="star-container">
           <img src="/images/icon-star.svg" alt="star" />
         </div>
@@ -44,7 +44,9 @@
 
     <!-- Thank you state end -->
 
-    <footer class="attribution">Coded by <a href="#">Amit Kumar</a>.</footer>
+    <div role="doc-credits" class="attribution">
+      Coded by <a href="#">Amit Kumar</a>.
+    </div>
     <script src="/script.js"></script>
   </body>
 </html>
